--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,13 +11,15 @@
         android:id="@+id/toolbar_main"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:title="Pico Full"
-        app:titleTextColor="@color/white"
-        app:titleTextAppearance="@style/ToolbarTitleAppearance"
+        android:layout_marginStart="32dp"
+        android:gravity="bottom"
         app:layout_constraintBottom_toTopOf="@+id/nav"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:title="Pico Full"
+        app:titleTextAppearance="@style/ToolbarTitleAppearance"
+        app:titleTextColor="@color/white">
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:id="@+id/layout_home"
@@ -39,7 +41,7 @@
                     android:layout_width="70dp"
                     android:layout_height="70dp"
                     android:background="@drawable/selector_settings"
-                    android:button="@null"/>
+                    android:button="@null" />
 
 
                 <com.google.android.material.radiobutton.MaterialRadioButton
@@ -48,7 +50,7 @@
                     android:layout_height="70dp"
                     android:layout_marginStart="12dp"
                     android:background="@drawable/selector_video"
-                    android:button="@null"/>
+                    android:button="@null" />
 
                 <com.google.android.material.radiobutton.MaterialRadioButton
                     android:id="@+id/radio_about"
@@ -56,7 +58,7 @@
                     android:layout_height="70dp"
                     android:layout_marginStart="12dp"
                     android:background="@drawable/selector_about"
-                    android:button="@null"/>
+                    android:button="@null" />
 
             </RadioGroup>
 
@@ -68,7 +70,7 @@
                 android:layout_marginEnd="24dp"
                 android:src="@drawable/selector_back"
                 android:visibility="gone"
-                tools:visibility="visible"/>
+                tools:visibility="visible" />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <androidx.appcompat.widget.LinearLayoutCompat
@@ -77,47 +79,47 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:gravity="center"
-            android:visibility="gone"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone">
 
             <RadioGroup
                 android:id="@+id/rg_alert"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="24dp"
-                android:orientation="horizontal" >
+                android:orientation="horizontal">
 
                 <com.google.android.material.radiobutton.MaterialRadioButton
-                    android:clickable="false"
                     android:id="@+id/radio_high_temp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/radiobutton_main"
-                    android:button="@null" />
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:background="@drawable/selector_temp"
+                    android:button="@null"
+                    android:clickable="false" />
 
                 <com.google.android.material.radiobutton.MaterialRadioButton
-                    android:clickable="false"
                     android:id="@+id/radio_xenon_failure"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/radiobutton_main"
-                    android:button="@null" />
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:background="@drawable/selector_xenon"
+                    android:button="@null"
+                    android:clickable="false" />
 
                 <com.google.android.material.radiobutton.MaterialRadioButton
-                    android:clickable="false"
                     android:id="@+id/radio_flow_err"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/radiobutton_main"
-                    android:button="@null" />
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:background="@drawable/selector_flow"
+                    android:button="@null"
+                    android:clickable="false" />
 
                 <com.google.android.material.radiobutton.MaterialRadioButton
-                    android:clickable="false"
                     android:id="@+id/radio_power_err"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/radiobutton_main"
-                    android:button="@null" />
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:background="@drawable/selector_power"
+                    android:button="@null"
+                    android:clickable="false" />
 
             </RadioGroup>
 
@@ -149,6 +151,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.2" />
+        app:layout_constraintGuide_percent="0.14" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
