--- a/app/src/main/res/layout/fragment_play_video.xml
+++ b/app/src/main/res/layout/fragment_play_video.xml
@@ -10,13 +10,11 @@
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
         app:cardCornerRadius="24dp"
         app:cardElevation="8dp"
         app:layout_constraintBottom_toTopOf="@+id/playerControlView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline14"
+        app:layout_constraintStart_toStartOf="@+id/guideline13"
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.exoplayer2.ui.PlayerView
@@ -28,19 +26,39 @@
             app:show_buffering="never"
             app:show_shuffle_button="false"
             app:use_controller="false" />
-    </androidx.cardview.widget.CardView>
 
+        <ImageView
+            android:id="@+id/img_start_play"
+            android:layout_width="220dp"
+            android:layout_height="220dp"
+            android:layout_gravity="center"
+            android:src="@drawable/img_paly" />
+    </androidx.cardview.widget.CardView>
 
 
     <com.google.android.exoplayer2.ui.PlayerControlView
         android:id="@+id/playerControlView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:show_timeout="0"
         app:controller_layout_id="@layout/layout_video_control"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:show_timeout="0" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline13"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.08" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline14"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.92" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
