--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,8 +4,14 @@
     <dimen name="text_size">12sp</dimen>
     <dimen name="scale_margin">52dp</dimen>
 
-    <dimen name="energy_wh">380dp</dimen>
+    <dimen name="energy_wh">500dp</dimen>
     <dimen name="energy_text">86dp</dimen>
     <dimen name="energy_rg">44dp</dimen>
     <dimen name="home_three">-60dp</dimen>
+    <dimen name="control">26dp</dimen>
+    <dimen name="home_rg">42dp</dimen>
+    <dimen name="home_btn">60dp</dimen>
+    <dimen name="home_pulse">24dp</dimen>
+    <dimen name="pulse_w">20dp</dimen>
+    <dimen name="toggle_switch">160dp</dimen>
 </resources>
