修改多语言图片

--- a/app/src/main/res/layout/dialog_exit.xml
+++ b/app/src/main/res/layout/dialog_exit.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:minWidth="500dp"
     android:layout_height="wrap_content">
 
     <TextView
@@ -14,7 +15,6 @@
         android:text="@string/exit_tips"
         android:textColor="@color/black"
         android:textSize="28sp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline15"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:hint="@string/input_password"
-        app:layout_constraintEnd_toStartOf="@+id/guideline15"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textView12"
         app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
@@ -34,9 +34,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/ok"
         android:textColor="@color/black"
-        app:layout_constraintEnd_toStartOf="@+id/guideline15"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_input_pass" />
 
     <Button
@@ -50,13 +53,6 @@
         app:layout_constraintBottom_toBottomOf="@+id/btn_exit"
         app:layout_constraintEnd_toStartOf="@+id/btn_exit"
         app:layout_constraintTop_toTopOf="@+id/btn_exit" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline15"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.9" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
