--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -76,12 +76,14 @@
 
         <com.google.android.material.radiobutton.MaterialRadioButton
             android:id="@+id/btn_chinese"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:button="@null"
-            android:background="@drawable/selector_cn"
+            android:background="@android:color/transparent"
             android:gravity="center"
+            android:drawableTop="@drawable/img_cn"
+            android:text="@string/chinese"
             android:textColor="@drawable/language_select"
             app:layout_constraintBottom_toBottomOf="@+id/textView5"
             app:layout_constraintStart_toEndOf="@+id/textView5"
@@ -89,12 +91,14 @@
 
         <com.google.android.material.radiobutton.MaterialRadioButton
             android:id="@+id/btn_english"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            android:background="@drawable/selector_en"
+            android:background="@android:color/transparent"
+            android:drawableTop="@drawable/img_en"
             android:button="@null"
             android:gravity="center"
+            android:text="@string/english"
             android:textColor="@drawable/language_select"
             app:layout_constraintBottom_toBottomOf="@+id/btn_chinese"
             app:layout_constraintStart_toEndOf="@+id/btn_chinese"
@@ -102,12 +106,14 @@
 
         <com.google.android.material.radiobutton.MaterialRadioButton
             android:id="@+id/btn_french"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:drawableTop="@drawable/img_fr"
             android:layout_marginStart="24dp"
-            android:background="@drawable/selector_fr"
             android:button="@null"
             android:gravity="center"
+            android:text="@string/French"
             android:textColor="@drawable/language_select"
             app:layout_constraintBottom_toBottomOf="@+id/btn_english"
             app:layout_constraintStart_toEndOf="@+id/btn_english"
@@ -115,12 +121,14 @@
 
         <com.google.android.material.radiobutton.MaterialRadioButton
             android:id="@+id/btn_spanish"
-            android:layout_width="60dp"
-            android:layout_height="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            android:background="@drawable/selector_es"
+            android:background="@android:color/transparent"
+            android:drawableTop="@drawable/img_es"
             android:button="@null"
             android:gravity="center"
+            android:text="@string/spanish"
             android:textColor="@drawable/language_select"
             app:layout_constraintBottom_toBottomOf="@+id/btn_french"
             app:layout_constraintStart_toEndOf="@+id/btn_french"
