--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -26,15 +26,30 @@
     </fragment>
     <action
         android:id="@+id/action_global_settingsFragment"
-        app:destination="@id/settingsFragment" />
-    <action android:id="@+id/action_global_videoFragment" app:destination="@id/videoFragment" />
-    <action android:id="@+id/action_global_homeFragment" app:destination="@id/homeFragment" />
+        app:destination="@id/settingsFragment"
+        app:launchSingleTop="true"
+        app:popUpTo="@id/settingsFragment"
+        app:popUpToInclusive="true" />
+    <action
+        android:id="@+id/action_global_videoFragment"
+        app:destination="@id/videoFragment"
+        app:launchSingleTop="true"
+        app:popUpToInclusive="false" />
+    <action
+        android:id="@+id/action_global_homeFragment"
+        app:destination="@id/homeFragment"
+        app:launchSingleTop="true"
+        app:popUpTo="@id/homeFragment"
+        app:popUpToInclusive="true" />
     <fragment
         android:id="@+id/aboutFragment"
         android:name="com.connor.picofull.ui.AboutFragment"
         android:label="fragment_about"
         tools:layout="@layout/fragment_about" />
-    <action android:id="@+id/action_global_aboutFragment" app:destination="@id/aboutFragment" />
+    <action
+        android:id="@+id/action_global_aboutFragment"
+        app:destination="@id/aboutFragment"
+        app:launchSingleTop="true" />
     <fragment
         android:id="@+id/playVideoFragment"
         android:name="com.connor.picofull.ui.PlayVideoFragment"
